# RBAvsMachine

./: .df_data_monthly.csv.icloud  .df_data_quarterly.csv.icloud  .gitignore  AGENTS.md  DataPull.qmd  DatabasePaper.qmd  ForecastErrorsRBA.qmd  Proposal.qmd  RBAvsMachine.qmd  README.md  _quarto.yml  df_seriesid_monthly.csv  df_seriesid_quarterly.csv  run_all.R
Python/: README.md  pyproject.toml
Python/notebooks/: Transformation_tests.ipynb  tabpfn_cpi_exploration.executed.ipynb  tabpfn_cpi_exploration.ipynb
Python/src/rba_tfm/: __init__.py  cpi_notebook_helpers.py
Python/tests/: test_cpi_notebook_helpers.py  test_notebook_contract.py
Python/utils/: DataImport.py  TimeSeriesStationarizer.py
R/: 00_setup.R  01_data_pull.R  02_stationarity.R  03_rba_forecasts.R  04_ml_models.R  04_ml_models_fast.R  05_evaluation.R  06_exhibits.R  DataPull.qmd  ForecastErrorsRBA.qmd  df_data.rds  run_eval_and_exhibits.R
R/functions/: data_pull.R  eval_helpers.R  ml_helpers.R  transforms.R
data/config/: abs_series.csv  fred_series.csv  rba_series.csv  yahoo_tickers.csv
data/processed/: monthly_stationarity_tests.csv  quarterly_stationarity_tests.csv
data/raw/: df_seriesid_monthly.csv  df_seriesid_quarterly.csv
documents/: DatabasePaper.qmd  Proposal.qmd  RBAvsMachine.Rmd  RBAvsMachine.qmd  header.tex  non_technical_summary.Rmd  references.bib
tables/: table1_rmsfe.csv  table2_relative_rmsfe.csv  table3_dm_tests.csv  table4_best_ml.csv
